fixing spacing

--- a/blocks/insight/insight.css
+++ b/blocks/insight/insight.css
@@ -170,6 +170,10 @@
   padding-top: 0px
 }
 
+.insight-wrapper :is(.\!pt-12) {
+  padding-top: 3rem !important
+}
+
 .insight-wrapper :is(.text-2xl) {
   font-size: 1.5rem;
   line-height: 2rem
